--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -45,7 +45,7 @@
 
 $global-font-size: 100%;
 $body-font-size: 100%;
-$global-width: rem-calc(664);
+$global-width: rem-calc(708);
 $global-lineheight: 1.5;
 $foundation-palette: (
         primary: #1f4a7f,
