--- a/src/scss/_template.scss
+++ b/src/scss/_template.scss
@@ -5,10 +5,11 @@ html, body {
     background: $body-background;
 }
 body {
-    visibility: visible;
-    opacity: 1;
-    -webkit-font-smoothing: antialiased;
-    font-size: $body-font-size;
+  visibility: visible;
+  opacity: 1;
+  -webkit-font-smoothing: antialiased;
+  font-size: $body-font-size;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 }
 
 * {
@@ -52,12 +53,10 @@ body {
         position: absolute;
         top: 0;
         right: 0;
-        left: rem(300);
+        left: rem(350);
         width: auto;
-        left: auto;
         padding-top: rem(56);
-        padding-right: calc((100% - #{rem(1024)})/2);
-        width: rem(724);
+        padding-right: calc((100% - #{rem(1280)})/2);
     }
 }
 
@@ -78,7 +77,7 @@ aside.sidebar {
         left: 0;
         width: rem(300);
         height: 100%;
-        padding-left: calc((100% - #{rem(1024)})/2);
+        padding-left: rem(50);
     }
 }
 
